fix alignment on captions

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -46,7 +46,7 @@ body { background-color: #282929; color: #fff; size: 14px; padding-top: 300px; h
 #badguy-pane .apt4 { position: relative; z-index: 4; margin: -230px 660px 0 0; }
 #badguy-pane .apt5 { position: relative; z-index: 7; margin: -200px 0 0 300px; }
 #badguy-pane #caption1 { }
-#badguy-pane #caption2 { z-index: 100; margin-left: -370px; margin-top: 50px; }
-#badguy-pane #caption3 { z-index: 100; margin-left: -600px; margin: 375px 0 0 350px; font-size: 36px; }
+#badguy-pane #caption2 { z-index: 100; margin-left: -340px; margin-top: 50px; }
+#badguy-pane #caption3 { z-index: 100; margin-left: -600px; margin: 375px 0 0 400px; font-size: 36px; }
 
 #the-end {  }
